syntax = "proto3";

package proto.fetcher;

import "data/entities.proto";

// Types of data that the fetchers can return
message DisciplineCollection {
  repeated data.DisciplineProto disciplines = 1;
}

message ProjectHierarchy {
  repeated DisciplineWithMajors disciplines = 1;
}

message DepartmentHierarchy {
  repeated DepartmentWithFaculty departments = 1;
}

// Helper structures

message DisciplineWithMajors {
  data.DisciplineProto discipline = 1;
  repeated MajorWithEntityCollection majors = 2;
}

message MajorWithEntityCollection {
  data.MajorProto major = 1;
  oneof collection {
    ProjectCollection project_collection = 2;
    StudentCollection student_collection = 3;
  }
}

message ProjectCollection {
  repeated data.ProjectProto projects = 1;
}

message StudentCollection {
  repeated data.StudentProto students = 1;
}

message DepartmentWithFaculty {
  data.DepartmentProto department = 1;
  repeated FacultyWithProjects faculty_with_projects = 2;
}

message FacultyWithProjects {
  data.FacultyProto faculty = 1;
  repeated data.ProjectProto projects = 2;
}